--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "datatables.net-bs4": "^1.10.19",
         "jquery": "^3.3.1",
+        "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.14.7"
     }
 }
