Ajax save chapitre

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /.idea
-
+/data/
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -17,3 +17,4 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
