--- a/phploy.ini
+++ b/phploy.ini
@@ -17,3 +17,11 @@
     ; Directories that should be purged after deploy
     ;purge[] = "var/cache/"
 
+[production]
+    scheme = sftp
+    user = 1917761
+    ; Or private key-based authentication:
+    ;privkey = '~/.ssh/id_rsa'
+    host = sftp.sd3.gpaas.net
+    path = /vhosts/96cbf66e51.yatu.ws/htdocs
+    port = 22
